--- a/demo/CH9_Motion.html
+++ b/demo/CH9_Motion.html
@@ -21,6 +21,8 @@
 </head>
 <body>
 <p id = "p1">Click on this text to update the chart with new data values (once).</p>
+<p id = "p2">click to add a new element!</p>
+<p id = "p3">click to remove an element!</p>
 
 <script>                                     //draw bar chart using svg.
 var w = 600;
@@ -43,7 +45,7 @@ var svg = d3
         .attr("width", w)
         .attr("height", h);
 svg
-        .selectAll("rect")
+        .selectAll("rect")             //***********//
         .data(dataset)
         .enter()
         .append("rect")
@@ -126,6 +128,151 @@ svg
                             });
 
         });
+
+
+//On click, update with new data
+d3.select("#p2")
+        .on("click", function() {
+
+            //Add one new value to dataset
+            var maxValue = 25;
+            var newNumber = Math.floor(Math.random() * maxValue);	//New random integer (0-24)
+            dataset.push(newNumber);			 			 		//Add new number to array
+
+            //Update scale domains
+            xScale.domain(d3.range(dataset.length));	//Recalibrate the x scale domain, given the new length of dataset
+            yScale.domain([0, d3.max(dataset)]);		//Recalibrate the y scale domain, given the new max value in dataset
+
+            //Select…
+            var bars = svg.selectAll("rect")			//Select all bars
+                    .data(dataset);							//Re-bind data to existing bars, return the 'update' selection
+            //'bars' is now the update selection
+
+            //Enter…
+            bars.enter()								//References the enter selection (a subset of the update selection)
+                    .append("rect")							//Creates a new rect
+                    .attr("x", w)							//Sets the initial x position of the rect beyond the far right edge of the SVG
+                    .attr("y", function(d) {				//Sets the y value, based on the updated yScale
+                        return h - yScale(d);
+                    })
+                    .attr("width", xScale.rangeBand())		//Sets the width value, based on the updated xScale
+                    .attr("height", function(d) {			//Sets the height value, based on the updated yScale
+                        return yScale(d);
+                    })
+                    .attr("fill", function(d) {				//Sets the fill value
+                        return "rgb(0, 0, " + (d * 10) + ")";
+                    });
+
+            //Update…
+           bars.transition()							//Initiate a transition on all elements in the update selection (all rects)
+                    .duration(500)
+                    .attr("x", function(d, i) {				//Set new x position, based on the updated xScale
+                        return xScale(i);
+                    })
+                    .attr("y", function(d) {				//Set new y position, based on the updated yScale
+                        return h - yScale(d);
+                    })
+                    .attr("width", xScale.rangeBand())		//Set new width value, based on the updated xScale
+                    .attr("height", function(d) {			//Set new height value, based on the updated yScale
+                        return yScale(d);
+                    });
+
+
+
+            //Update all labels
+            //
+            //Exercise: Modify this code to add a new label each time a new bar is added!
+            //
+            svg.selectAll("text")
+                    .data(dataset)
+                    .transition()
+                    .duration(500)
+                    .text(function(d) {
+                        return d;
+                    })
+                    .attr("x", function(d, i) {
+                        return xScale(i) + xScale.rangeBand() / 2;
+                    })
+                    .attr("y", function(d) {
+                        return h - yScale(d) + 14;
+                    });
+
+        });
+
+    d3.select("#p3")
+        .on("click", function() {
+
+            //Remove one value from dataset
+            dataset.shift();
+
+            //Update scale domains
+            xScale.domain(d3.range(dataset.length));	//Recalibrate the x scale domain, given the new length of dataset
+            yScale.domain([0, d3.max(dataset)]);		//Recalibrate the y scale domain, given the new max value in dataset
+
+            //Select…
+            var bars = svg.selectAll("rect")			//Select all bars
+                    .data(dataset);							//Re-bind data to existing bars, return the 'update' selection
+            //'bars' is now the update selection
+
+            //Enter…
+            /*bars.enter()								//References the enter selection (a subset of the update selection)
+                    .append("rect")							//Creates a new rect
+                    .attr("x", w)							//Sets the initial x position of the rect beyond the far right edge of the SVG
+                    .attr("y", function(d) {				//Sets the y value, based on the updated yScale
+                        return h - yScale(d);
+                    })
+                    .attr("width", xScale.rangeBand())		//Sets the width value, based on the updated xScale
+                    .attr("height", function(d) {			//Sets the height value, based on the updated yScale
+                        return yScale(d);
+                    })
+                    .attr("fill", function(d) {				//Sets the fill value
+                        return "rgb(0, 0, " + (d * 10) + ")";
+                    });*/
+
+            //Update…
+            bars.transition()							//Initiate a transition on all elements in the update selection (all rects)
+                    .duration(500)
+                    .attr("x", function(d, i) {				//Set new x position, based on the updated xScale
+                        return xScale(i);
+                    })
+                    .attr("y", function(d) {				//Set new y position, based on the updated yScale
+                        return h - yScale(d);
+                    })
+                    .attr("width", xScale.rangeBand())		//Set new width value, based on the updated xScale
+                    .attr("height", function(d) {			//Set new height value, based on the updated yScale
+                        return yScale(d);
+                    });
+
+            //Exit…
+            bars.exit()				//References the exit selection (a subset of the update selection)
+                    .transition()		//Initiates a transition on the one element we're deleting
+                    .duration(500)
+                    .attr("x", w)		//Move past the right edge of the SVG
+                    .remove();   		//Deletes this element from the DOM once transition is complete
+
+
+
+            //Update all labels
+            //
+            //Exercise: Modify this code to remove the correct label each time!
+            //
+            svg.selectAll("text")
+                    .data(dataset)
+                    .transition()
+                    .duration(500)
+                    .text(function(d) {
+                        return d;
+                    })
+                    .attr("x", function(d, i) {
+                        return xScale(i) + xScale.rangeBand() / 2;
+                    })
+                    .attr("y", function(d) {
+                        return h - yScale(d) + 14;
+                    });
+
+        });
+
+
 </script>
 </body>
 </html>
