--- a/demo/ForceDirected.html
+++ b/demo/ForceDirected.html
@@ -19,7 +19,7 @@
 <script>
     var width = 960;
         height = 500;
-    var color = d3.scale.category20(); //?
+    var color = d3.scale.category20();
 
     var force = d3.layout.force()
             .charge(-120)
