--- a/coding_practice_JS/forceDirected/forceDireced.html
+++ b/coding_practice_JS/forceDirected/forceDireced.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Force</title>
     <script src = "vector.js"></script>
-    <script src = "miserables.js"></script>
+    <script src = "miserables.json"></script>
     <style>
         html, body, svg{
             margin: 10px;
