--- a/coding_practice_JS/StreamGraph/StreamGraph.html
+++ b/coding_practice_JS/StreamGraph/StreamGraph.html
@@ -103,14 +103,14 @@
                 else
                     max = -bottom;
 
-//                for( var i = 0; i <= number; i++ )
-//                {
-//                    for( var j = 0; j < points; j++ )
-//                    {
-//                        this.layers[i][j].x = this.layers[i][j].x * dx;
-//                        this.layers[i][j].y = ( 400 / 2 + 200/max * ( this.layers[i][j].g + this.layers[0][j].f ) );
-//                    }
-//                }
+                for( var i = 0; i <= number; i++ )
+                {
+                    for( var j = 0; j < points; j++ )
+                    {
+                        this.layers[i][j].x = this.layers[i][j].x * dx;
+                        this.layers[i][j].y = ( 400 / 2 + 200/max * ( this.layers[i][j].g + this.layers[0][j].f ) );
+                    }
+                }
                 for(var i = number; i >= 0; i--)
                 {
                     var pathTmp = [];
